web/src/Desktop.scss
@import "./styles/variables";
@import "sass-rem";

#desktop {
  $accountIconColor: #fdee0a;
  $itemWidth: 420px;

  display: flex;
  flex-flow: column nowrap;

  width: 100vw;
  height: 100vh;

  h1 {
    color: $fontColor;
    text-transform: uppercase;
    font-size: rem(60px);
    font-weight: 600;
  }

  p,
  span {
    color: $fontColor;
    margin: 0;
    font-size: rem(23px);
    font-weight: 500;
    letter-spacing: rem(1px);
  }

  li {
    list-style: none;
  }

  svg {
    width: 24px;
    height: 24px;
  }

  .overlay {
    background-color: $overlayColor;
    width: 100%;
    height: 100%;
  }

  .brackets {
    &::before {
      content: "(";
    }

    &::after {
      content: ")";
    }
  }

  .header {
    background-image: url("./assets/images/header.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    min-height: 200px;
    flex: 2;

    .header-container {
      display: flex;
      flex-flow: column nowrap;
      justify-content: center;
      align-items: center;
      text-align: center;
      height: 100%;
      padding: 20px 35px;

      > * {
        margin: 0;
      }

      .destination {
        $letterSpacing: rem(26px);

        order: 2;
        width: 496px;
        letter-spacing: $letterSpacing;
        border: 3px solid $borderColor;
        border-radius: 10px;
        margin: 14px;

        &::before {
          content: "";
          margin-left: $letterSpacing;
        }
      }

      .username {
        order: 0;
      }

      .account-level {
        order: 3;
        display: flex;
        flex-flow: row wrap;
        justify-content: space-between;
        align-items: center;

        .account-level__star-icon {
          fill: $accountIconColor;
          margin-right: 10px;
        }
      }
    }
  }

  .main {
    margin: 30px 0;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    flex: 2;

    > section {
      padding: 20px 35px;
      width: 100%;
    }

    .ticket-info {
      background: $primaryColor;

      .flight-info {
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-evenly;
        align-items: center;

        > * {
          text-align: center;
        }

        .dest {
          > * {
            margin: 0;
          }

          .terminal {
            font-size: rem(20px);
            white-space: nowrap;
          }

          .time {
            font-size: rem(18px);
          }
        }

        .flight-number {
          width: 360px;
          position: relative;
          background: linear-gradient(
            0deg,
            transparent 48%,
            $borderColor 48%,
            $borderColor 52%,
            transparent 52%
          );

          img {
            width: 61px;
            height: 54px;
            background-color: $primaryColor;
          }

          p {
            position: absolute;
            left: 50%;
            transform: translateX(-50%);
            white-space: nowrap;
          }

          > * {
            font-size: rem(20px);
            margin: 0;
          }

          &::before,
          &::after {
            content: "";
            display: block;
            background-color: $bgColor;
            width: 30px;
            height: 30px;
            border-radius: 50%;
            position: absolute;
            top: 50%;
            transform: translateY(-50%);
          }

          &::before {
            left: 0;
          }

          &::after {
            right: 0;
          }
        }
      }
    }

    .ratings {
      ul {
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-evenly;
        align-items: center;
        margin: 0;
        padding: 0;

        & > .ratings__rate-item {
          margin: 0 60px;
          width: $itemWidth;

          p {
            color: $descFontColor;
            text-align: center;
          }

          .ratings__rating {
            display: flex;
            flex-flow: row nowrap;
            justify-content: center;
            align-items: center;
            margin-top: 25px;

            img {
              height: 60px;
              margin-right: 30px;
            }
          }
        }
      }
    }
  }

  .footer {
    border-top: 2px solid #bbbdce;
    flex: 1;
    padding: 20px 35px;

    > ul {
      display: flex;
      flex-flow: row nowrap;
      justify-content: space-evenly;
      align-items: center;
      padding: 0;
      margin: 0;
      width: 100%;

      > li {
        $borderRadius: 10px;
        margin: 0 10px;

        min-width: 200px;
        max-width: $itemWidth;
        height: 190px;
        border-bottom-left-radius: $borderRadius;
        border-bottom-right-radius: $borderRadius;
        box-shadow: 2px 4px 6px -2px #00000023;

        > * {
          margin: 0;
        }

        &,
        img {
          border-top-left-radius: $borderRadius;
          border-top-right-radius: $borderRadius;
        }

        > img {
          width: 100%;
          height: 150px;
          object-fit: cover;
          object-position: center;
          border-bottom: 6px inset $lighterPrimaryColor;
        }

        > p {
          color: $descFontColor;
          height: 40px;
          white-space: nowrap;
          text-align: center;
        }
      }
    }

    #top-10-attractions {
      > img {
        object-position: bottom;
      }
    }
  }
}

